# orbit_launcher

./: index.html  package.json
src/: App.vue  app.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: bgm_manager.ts
src/lib/components/: GlassLayer.vue  TextButton.vue
src/routes/: index.ts
src/routes/initial_setup/: LanguageSetup.vue  SetupBanner.vue
